force-app/main/default/objects/SVMXC__Service_Group_Product__c/fields/Active_Certification__c.field-meta.xml
<CustomField>
    <fullName>Active_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP- 42718: Field which will indicate if the user is currently certified to work on that Product based on the certification information present in LMS.</description>
    <label>Active Certification</label>
    <type>Checkbox</type>
</CustomField>