force-app/main/default/objects/SVMXC__Service_Group_Product__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
	<fullName>Certification_Name__c</fullName>
	<description>CMCP-21: This field stores Certification Name coming from LMS Integration.</description>
	<label>Certification Title</label>
	<length>255</length>
	<type>Text</type>
</CustomField>