force-app/main/default/objects/SVMXC__Service_Group_Product__c/fields/Student_Certification_Due_Date__c.field-meta.xml
<CustomField>
	<fullName>Student_Certification_Due_Date__c</fullName>
	<description>CMCP-21: This field contains Student Certification&apos;s Due Date. Populated from LMS Integration.</description>
	<label>Certification Due Date</label>
	<type>Date</type>
</CustomField>